force-app/main/default/objects/Bus_Trip__c/Bus_Trip__c.object-meta.xml
<CustomObject>
    <label>Bus Trip</label>
    <nameField>
        <displayFormat>TRIP-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bus Trips</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>