force-app/main/default/objects/Bus_Trip__c/fields/Arrival_Time__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Time__c</fullName>
    <label>Arrival Time</label>
    <type>Time</type>
</CustomField>