force-app/main/default/objects/Bus_Trip__c/fields/Base_Fare__c.field-meta.xml
<CustomField>
    <fullName>Base_Fare__c</fullName>
    <label>Base Fare</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>