force-app/main/default/objects/Bus_Trip__c/fields/Boarding_Point__c.field-meta.xml
<CustomField>
    <fullName>Boarding_Point__c</fullName>
    <label>Boarding Point</label>
    <length>120</length>
    <type>Text</type>
</CustomField>