force-app/main/default/objects/Bus_Trip__c/fields/Bus__c.field-meta.xml
<CustomField>
    <fullName>Bus__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Bus</label>
    <referenceTo>Bus__c</referenceTo>
    <relationshipLabel>Bus Trips</relationshipLabel>
    <relationshipName>Bus_Trips</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>