force-app/main/default/objects/Bus_Trip__c/fields/Dropping_Point__c.field-meta.xml
<CustomField>
    <fullName>Dropping_Point__c</fullName>
    <label>Dropping Point</label>
    <length>120</length>
    <type>Text</type>
</CustomField>