force-app/main/default/objects/Bus_Trip__c/fields/Duration_Label__c.field-meta.xml
<CustomField>
    <fullName>Duration_Label__c</fullName>
    <label>Duration Label</label>
    <length>20</length>
    <type>Text</type>
</CustomField>