force-app/main/default/objects/Bus_Trip__c/fields/External_Trip_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Trip_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Trip Id</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>